--- a/example.config.yaml
+++ b/example.config.yaml
@@ -6,10 +6,10 @@ users:
   admin:
     password: pbkdf2_sha256$10000$WU3VOKzD$ErNjKbRJR/vHQf2JsKx4jd6CPPx6KnBof+3C/w9dsfM=
     data:
-      user: admin
+      sub: admin
       admin: True
   user:
     password: pbkdf2_sha256$10000$1J611I6Q$SwJPldCLDq4V65V6dOm3N8P7W/iX9/ogOBIuh3tdduU=
     data:
-      user: user
+      sub: user
       admin: False
